реализовал работу с поставщиками
