# tasks/backend/GO/gremiha3/docs/swagger.json
@@ -7,6 +7,224 @@
         "version": "1.0"
     },
     "paths": {
+        "/product": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Save register data of user in Repo.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Добавить товар.",
+                "parameters": [
+                    {
+                        "description": "Create product",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.AddProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Product"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/product/{product_id}": {
+            "get": {
+                "description": "Return product with \"id\" number.",
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Посмотреть товар по его id.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "product_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Product"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/products": {
+            "get": {
+                "description": "Return products list.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Получить список всех товаров.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Product"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/provider": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Save register data of user in Repo.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Provider"
+                ],
+                "summary": "Добавить поставщика.",
+                "parameters": [
+                    {
+                        "description": "Create Provider",
+                        "name": "Provider",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.AddProvider"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Provider"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/provider/{provider_id}": {
+            "get": {
+                "description": "Return Provider with \"id\" number.",
+                "tags": [
+                    "Provider"
+                ],
+                "summary": "Посмотреть постащика по его id.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Provider ID",
+                        "name": "provider_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Provider"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/providers": {
+            "get": {
+                "description": "Return Providers list.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Provider"
+                ],
+                "summary": "Получить список всех поставщиков.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Provider"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "description": "Returns the authorization status",
@@ -19,7 +237,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Login user by login=email/password.",
+                "summary": "Авторизоваться по логину и паролю.",
                 "parameters": [
                     {
                         "description": "Login user. Логин указывается в формате электронной почты. Пароль не меньше 6 символов. Роль: super или regular",
@@ -53,6 +271,43 @@
                 }
             }
         },
+        "/user/login/{login}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Return user with \"login\" value.",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Посмотреть пользователя по его логину.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Login",
+                        "name": "login",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/register": {
             "post": {
                 "description": "Save register data of user in Repo.",
@@ -60,9 +315,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "Auth"
                 ],
-                "summary": "Register user",
+                "summary": "Добавить пользователя.",
                 "parameters": [
                     {
                         "description": "Create user. Логин указывается в формате электронной почты. Пароль не меньше 6 символов. Роль: super или regular",
@@ -79,6 +334,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.User"
+                        }
+                    },
+                    "201": {
+                        "description": "Пользователь успешно зарегистрирован.",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -105,9 +366,9 @@
                 ],
                 "description": "Return user with \"id\" number.",
                 "tags": [
-                    "Auth"
+                    "User"
                 ],
-                "summary": "Get user by user id.",
+                "summary": "Посмотреть пользователя по его id.",
                 "parameters": [
                     {
                         "type": "integer",
@@ -145,9 +406,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "User"
                 ],
-                "summary": "Get all users.",
+                "summary": "Получить список всех пользователей.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -169,6 +430,40 @@
         }
     },
     "definitions": {
+        "model.AddProduct": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "example": "яблоки"
+                },
+                "price": {
+                    "type": "number",
+                    "example": 132.12
+                },
+                "provider_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "stock": {
+                    "type": "integer",
+                    "example": 500
+                }
+            }
+        },
+        "model.AddProvider": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "example": "Microsoft"
+                },
+                "origin": {
+                    "type": "string",
+                    "example": "Kazakhstan"
+                }
+            }
+        },
         "model.AddUser": {
             "type": "object",
             "properties": {
@@ -196,6 +491,40 @@
                 "password": {
                     "type": "string",
                     "example": "123456"
+                }
+            }
+        },
+        "model.Product": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "provider_id": {
+                    "type": "integer"
+                },
+                "stock": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.Provider": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "origin": {
+                    "type": "string"
                 }
             }
         },
